--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="module" src="script.js"></script>
+    <style>
+        .red-box {
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
     <div id="app"></div>
