--- a/demo/index.html
+++ b/demo/index.html
@@ -10,6 +10,10 @@
         .red-box {
             background-color: red;
         }
+
+        .green-box {
+            background-color: green;
+        }
     </style>
 </head>
 <body>
